--- a/src/auth.html
+++ b/src/auth.html
@@ -20,12 +20,12 @@
     </style>
 </head>
 <body>
-    <div class="center"><img src="images/loading.gif" alt="loading image" width="100"><br /><span id="notice">Validating the user session</span> </div>
+    <div class="center"><img src="/images/loading.gif" alt="loading image" width="100"><br /><span id="notice">Validating the user session</span> </div>
 
     <button id="signout">Sign out</button>
 
     <script src="https://unpkg.com/@asgardeo/auth-spa@latest/dist/asgardeo-spa.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts/auth.js" type="module"></script>  
+    <script src="/scripts/auth.js" type="module"></script>  
 </body>
 </html>
