minor auth fixes

--- a/src/auth.html
+++ b/src/auth.html
@@ -18,6 +18,8 @@
             font-size: 40px;
         }
     </style>
+    <script src="/scripts/asgardeo-spa.production.min.js"></script>
+    <script src="/scripts/authentication.js" type="module"></script> 
 </head>
 <body>
     <div class="center"><img src="/images/loading.gif" alt="loading image" width="100"><br /><span id="notice">Validating the user session</span> </div>
@@ -25,7 +27,6 @@
     <button id="signout">Sign out</button>
 
     <script src="https://unpkg.com/@asgardeo/auth-spa@latest/dist/asgardeo-spa.production.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/scripts/auth.js" type="module"></script>  
 </body>
 </html>
