--- a/src/404.html
+++ b/src/404.html
@@ -11,7 +11,7 @@
     <div class="container">
         <center>
             <h1 class="is-size-1">Page not found</h1>
-            <img src="images/404.gif" alt="Image of a confused man" width="250"/><br />
+            <img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898199/404_m7kggf.gif" alt="Image of a confused man" width="250"/><br />
             <p class="is-size-4">
                 Oops! Looks like you wandered off the beaten path.<br />
                 Don't worry, even the best investors take unexpected turns.<br />
