--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 <body>
     <section class="hero is-success is-medium" style="position: relative;">
         <video autoplay loop muted class="hero-background">
-          <source src="videos/hero-background.mp4" type="video/mp4">
+          <source src="https://res.cloudinary.com/duxwfcvuy/video/upload/q_auto/v1712895288/hero-background_koyf0o.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <div class="hero-overlay"></div>
@@ -52,7 +52,7 @@
             <p class="is-size-5">Dive into stock analysis tools exclusively crafted for the SIX Swiss Exchange. Gain unique insights and make informed decisions tailored to the Swiss market</p>
           </div>
           <div class="column is-half">
-            <img src="images/swiss-alps.jpg" alt="image of eak bench and flag in Swiss Alps" class="mt-5"/>
+            <img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712897111/allphoto-bangkok-ZlTC__EPkKk-unsplash_p0h77u.jpg" alt="image of eak bench and flag in Swiss Alps" class="mt-5"/>
           </div>
         </div>
         <div class="columns">
@@ -65,7 +65,7 @@
         <div class="column is-half">
           <div class="columns">
             <div class="column">
-              <center><img src="images/views.gif" alt="image of list" width="100" class="mt-6"/></center>
+              <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898177/views_ddd5w3.gif" alt="image of list" width="100" class="mt-6"/></center>
             </div>
             <div class="column is-four-fifths">
               <h3 class="is-size-3 mt-5">Views</h3>
@@ -76,7 +76,7 @@
         <div class="column is-half">
           <div class="columns">
             <div class="column">
-              <center><img src="images/filters.gif" alt="image of list" width="120" class="mt-5"/></center>
+              <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898181/filters_i6fnum.gif" alt="image of list" width="120" class="mt-5"/></center>
             </div>
             <div class="column is-four-fifths">
               <h3 class="is-size-3 mt-5">Filters</h3>
@@ -90,7 +90,7 @@
         <div class="column is-half">
           <div class="columns">
             <div class="column">
-              <center><img src="images/dividend-track.gif" alt="image of list" width="100" class="mt-6"/></center>
+              <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898176/dividend-track_phltlb.gif" alt="image of list" width="100" class="mt-6"/></center>
             </div>
             <div class="column is-four-fifths">
               <h3 class="is-size-3 mt-5">Dividend Tracking</h3>
@@ -101,7 +101,7 @@
         <div class="column is-half">
           <div class="columns">
             <div class="column">
-              <center><img src="images/alerts.gif" alt="image of list" width="120" class="mt-5"/></center>
+              <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898167/alerts_mxa09m.gif" alt="image of list" width="120" class="mt-5"/></center>
             </div>
             <div class="column is-four-fifths">
               <h3 class="is-size-3 mt-5">Alerts</h3>
@@ -126,7 +126,7 @@
 
     <div class="columns has-shadow">
       <div class="column is-half">
-        <center><img src="images/stay-informed.gif" alt="man getting a notification" class="mt-5"/></center>
+        <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898177/stay-informed_nhsfya.gif" alt="man getting a notification" class="mt-5"/></center>
       </div>
       <div class="column is-half">
         <h3 class="is-size-3 mt-5 p-4">Stay Informed</h3>
@@ -140,13 +140,13 @@
         <p class="is-size-4 p-4">Explore market dynamics and hone your trading skills by creating views and utilizing filters to uncover valuable insights</p>
       </div>
       <div class="column is-half">
-        <center><img src="images/learn.gif" alt="image of list" class="mt-5" width="200"/></center>
+        <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898214/learn_jdmcbw.gif" alt="image of list" class="mt-5" width="200"/></center>
       </div>
     </div>
 
     <div class="columns has-shadow mt-5">
       <div class="column is-half">
-        <center><img src="images/reasearch.gif" alt="image of list" class="mt-5" width="200"/></center>
+        <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898221/reasearch_hblp8r.gif" alt="image of list" class="mt-5" width="200"/></center>
       </div>
       <div class="column is-half">
         <h3 class="is-size-3 mt-5 p-4">Research Made Easy</h3>
@@ -160,7 +160,7 @@
         <p class="is-size-4 p-4">Identify and manage risks effectively by closely monitoring your view's performance and receiving timely alerts for market downturns or changes in stock fundamentals</p>
       </div>
       <div class="column is-half">
-        <center><img src="images/safeguard.gif" alt="image of list" class="mt-5" width="200"/></center>
+        <center><img src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712898206/safeguard_dkx9mc.gif" alt="image of list" class="mt-5" width="200"/></center>
       </div>
     </div>
 
