--- a/src/disclaimer.html
+++ b/src/disclaimer.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1 class="is-size-2">Disclaimer</h1>
-        <p class="is-size-4">This platform is intended for educational purposes only. While I strive to provide accurate and timely information, please note that the calculations and data presented here may not adhere to industry standards. Users are encouraged to cross-reference findings with other reputable sources and seek professional financial advice before making any investment decisions. <b>Additionally, due to data license restrictions, random data may be fed into the system.</b> Thank you for your understanding.</p>
+        <p class="is-size-4">The data provided on this platform is simulated and for educational purposes only. Originally, the system was designed to use the Yahoo Finance API, which allows for personal use only. To comply with usage restrictions and ensure compliance, fake data is now used exclusively. All stock prices, financial metrics, and dividend announcements are randomly generated and do not reflect real-world market conditions. <b>This platform should not be used for making actual investment decisions.</b> Any resemblance to real companies or events is purely coincidental. If you believe that this usage of Yahoo Finance API is allowed or have any questions, please contact me at dumindu.chath@gmail.com</p>
     </div>
 </body>
 </html>
