--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,15 @@
       </div>
     </div>
 
+    <div class="columns">
+      <div class="column is-full">
+        <center class="is-size-2 m-5 has-text-weight-bold">MarketSentry in Action</center>
+        <center>
+          <iframe width="620" height="350" src="https://www.youtube.com/embed/cR18txRX4RQ?si=WCX1CE-WBcwXn7JS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </center>
+      </div>
+    </div>
+
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
