add missing licenses

--- a/src/licenses.html
+++ b/src/licenses.html
@@ -42,6 +42,18 @@
                     <td>-</td>
                     <td><a href="https://loading.io/license#free-license" target="_blank" rel="noopener noreferrer">https://loading.io/license#free-license</a></td>
                 </tr>
+                <tr>
+                    <td>Economic event data</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td><a href="https://rapidapi.com/emir12/api/economic-events-calendar" target="_blank" rel="noopener noreferrer">https://rapidapi.com/emir12/api/economic-events-calendar</a></td>
+                </tr>
+                <tr>
+                    <td>Bulma CSS Framework</td>
+                    <td>MIT License</td>
+                    <td>-</td>
+                    <td><a href="https://github.com/jgthms/bulma?tab=MIT-1-ov-file#readme" target="_blank" rel="noopener noreferrer">https://github.com/jgthms/bulma?tab=MIT-1-ov-file#readme</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
